tests/snapshots/examples_fixtures/type_system__failing__189_contextual_boundary_unresolved_strict_e425.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `TypeSystem.HmGenericModule` to import.

  examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx:3:1
  |
3 | import TypeSystem.HmGenericModule
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `TypeSystem.HmGenericModule.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `TypeSystem.HmGenericModule` under roots: examples/type_system/failing, lib, src (imported from examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx).
== stdout ==
<not executed>
